<resources>
    <string name="app_name">VP Gilt</string>
    <string name="retry">Retry</string>
    <string name="error_msg">An error occurred. Please check your network</string>

    <string name="content_description_sale_item">Image of the sale</string>

    <string name="label_description">Description</string>
    <string name="label_begins">Begins</string>
    <string name="label_ends">Ends</string>
    <string name="label_URL">URL</string>

</resources>
